--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,11 @@
 	<title>coursera </title>
 </head>
 <body>
-<h1>hello courser test</h1>
+<h1>hello coursera test</h1>
+<h2>hello coursera test</h2>
+<h3>hello coursera test</h3>
+<h4>hello coursera test</h4>
+<h5>hello coursera test</h5>
+<h6>hello coursera test</h6>
 </body>
 </html>
